bottom whitespace fix

--- a/src/app/home/index.less
+++ b/src/app/home/index.less
@@ -75,17 +75,17 @@
     display: flex;
     overflow: hidden;
     height: 100vh; // this isn't working properly at 100, is it a flexbox bug?
-    margin-top: -161px; // total computed header + .refine-view-container height
-    padding-top: 161px; // total computed header + .refine-view-container height
+    margin-top: -101px; // total computed header + .refine-view-container height
+    padding-top: 101px; // total computed header + .refine-view-container height
     position: relative;
     width: 100%;
     &.with-refinebar {
-      margin-top: -161px;
-      padding-top: 161px;
+      margin-top: -141px;
+      padding-top: 141px;
     }
     &.with-refinebar-and-message {
-      margin-top: -192px;
-      padding-top: 192px;
+      margin-top: -171px;
+      padding-top: 171px;
     }
   }
 
